python-mne (0.13+dfsg-1) unstable; urgency=medium

  * Fresh upstream release
  * debian/patches
    - dropped changeset_*

 -- Yaroslav Halchenko <debian@onerussian.com>  Wed, 28 Sep 2016 20:38:09 -0400

python-mne (0.12+dfsg-2) unstable; urgency=medium

  * debian/control
    - make recent mayavi2 (>= 4.4.3-1) the lead bdepends to python-vtk{6,}
      as an alternatives (Closes: #830357)
      Versioned mayavi2 is needed since otherwise would fail with mayavi2
      on older releases of debian/ubuntu

 -- Yaroslav Halchenko <debian@onerussian.com>  Sun, 10 Jul 2016 11:15:35 -0400

python-mne (0.12+dfsg-1) unstable; urgency=medium

  * Fresh upstream release
  * debian/control
    - boosted policy to 3.9.8
    - suggest python-pycuda

 -- Yaroslav Halchenko <debian@onerussian.com>  Fri, 13 May 2016 17:38:17 -0400

python-mne (0.11+dfsg-1) unstable; urgency=medium

  * Fresh upstream release
  * debian/patches/fix_test - dropped, upstreamed

 -- Yaroslav Halchenko <debian@onerussian.com>  Mon, 04 Jan 2016 20:51:51 -0500

python-mne (0.10.1+dfsg-1) unstable; urgency=medium

  [ Jaakko Leppakangas ]
  * New upstream version
  * Removed depedency on mayavi2

  [ Yaroslav Halchenko ]
  * debian/patches
    - dropped CPed from upstream changeset_9c7ef6d1*
  * debian/control
    - added python-vtk | mayavi2 to the build-depends

 -- Yaroslav Halchenko <debian@onerussian.com>  Fri, 27 Nov 2015 10:44:11 -0500

python-mne (0.8.6+dfsg-2) unstable; urgency=medium

  * debian/{rules.patches/changeset_b9d4d*}
    Absorb upstream patch and specify not using HOME directory for generated
    pre-computed data, but instead use tempdir. (Closes: #768730)

 -- Yaroslav Halchenko <debian@onerussian.com>  Thu, 11 Dec 2014 09:33:18 -0500

python-mne (0.8.6+dfsg-1) unstable; urgency=low

  * New upstream version
  * remove dependency on d3

 -- Alexandre Gramfort <alexandre.gramfort@m4x.org>  Sat, 25 Oct 2014 16:09:07 -0400

python-mne (0.8.4+dfsg-1) unstable; urgency=low
