@@ -3,6 +3,10 @@ python-mne (0.13+dfsg-1) unstable; urgency=medium
   * Fresh upstream release
   * debian/patches
     - dropped changeset_*
+    - added a changeset (upstreamed) to skip few tests if no usable mayavi2
+  * debian/rules
+    - fake http_proxy settings to forbid network access
+    - HOME=build/ to avoid trying to deal with / as HOME
 
  -- Yaroslav Halchenko <debian@onerussian.com>  Wed, 28 Sep 2016 20:38:09 -0400
 
